--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
+    "remixicon": "^4.6.0",
     "springedge": "^1.0.6"
   },
   "devDependencies": {
