--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
     "remixicon": "^4.6.0",
+    "socket.io-client": "^4.8.1",
     "springedge": "^1.0.6"
   },
   "devDependencies": {
