--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,1 +1,3 @@
 VITE_BASE_URL=http://localhost:3000
+VITE_GO_MAPS_API_KEY=AlzaSydREMK-gFsrnuDz0RLCTBLN9gN0XIcE4Qf
+# VITE_GO_MAPS_API_KEY=AlzaSyKrgXJ-kImLv6pMi9TUOkxtkkA5bjK2AFg
