--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,7 +13,10 @@
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.0.12",
     "axios": "^1.8.4",
+    "cors-anywhere": "^0.4.4",
     "gsap": "^3.12.7",
+    "leaflet": "^1.9.4",
+    "leaflet.locatecontrol": "^0.84.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
